<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBg"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/oneimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/dailywin" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/onetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/daily_win_tips"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/twoimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/safepick" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/twotext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/safe_picks"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/threimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/fiveodds" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/threetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/daily_5_odds"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/fourimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/trebletips" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/fourtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/treble_tips"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/fiveimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/overunder" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/fvtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/over_under"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_stroke"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/siximg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/mixed" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:id="@+id/sixtxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/mixed_tips"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/joinID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/teljoin">

    </androidx.appcompat.widget.AppCompatImageView>


</RelativeLayout>